--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "travis-migration-scheduler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "travis-ping": "^1.0.2"
-  },
-  "devDependencies": {},
+  "name": "kapgel-travis-ping",
+  "version": "0.0.0",
+  "description": "Travis ping with given repo and branch",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "major": "npm version major -m 'New major version %s'",
+    "minor": "npm version minor -m 'New minor version %s'",
+    "patch": "npm version patch -m 'New patch version %s'",
+    "lint": "./node_modules/.bin/eslint .",
+    "test": "./node_modules/.bin/mocha --recursive",
+    "main": "index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kapgel/travis-migration-scheduler.git"
+    "url": "git+https://github.com/kapgel/kapgel-travis-migration-scheduler.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kapgel/travis-migration-scheduler/issues"
+    "url": "https://github.com/kapgel/kapgel-travis-migration-scheduler/issues"
   },
-  "homepage": "https://github.com/kapgel/travis-migration-scheduler#readme"
+  "homepage": "https://github.com/kapgel/kapgel-travis-migration-scheduler#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "dirty-chai": "^1.2.2",
+    "eslint": "^2.13.1",
+    "eslint-config-kapgel": "^1.1.1",
+    "eslint-plugin-import": "^1.9.2",
+    "eslint-plugin-json": "^1.2.0",
+    "mocha": "^2.5.3"
+  },
+  "dependencies": {
+    "kapgel-logger": "^1.1.1",
+    "travis-ping": "^1.0.2"
+  }
 }
